Added route for getting a user's information from their ID
