# project/backend/src/server.js
@@ -31,6 +31,8 @@ import {
   unvoteLocation,
   unvoteTime,
   deleteEvent,
+  assertValidUserId,
+  getUser,
   getFriends,
   getInvites,
   setFriends,
@@ -214,6 +216,12 @@ app.put('/event/unvote/time', catchErrors(authed(async (req, res, userId) => {
 /***************************************************************
                           User Functions
 ***************************************************************/
+
+app.get('/user/:userId', catchErrors(authed(async (req, res, thisUserId) => {
+  const { userId, } = req.params;
+  await assertValidUserId(userId);
+  return res.json({user: await getUser(userId)});
+})));
 
 app.get('/user/friends', catchErrors(authed(async (req, res, userId) => {
   return res.status(200).send({userIds: await getFriends(userId)});
